--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "@prisma/client": "^6.14.0",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
-    "next": "15.5.0",
-    "prisma": "^6.14.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.11",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "postcss": "^8.5.6",
+    "prisma": "^6.14.0",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
