--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.14.0",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
+    "lucide-react": "^0.542.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
